--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background-color:rgba(85, 83, 83, 0.479);
+    background-color:rgba(85, 83, 83, 0.884);
     margin-top:1.5vh;
     margin-bottom:1.5vh;
     margin-right:3.5vh;
@@ -84,13 +84,13 @@ body{
     grid-area: undermeny;
 }
 .undermenybutton {
-    width: 13vw;
+    width: 15vw;
     height: 3.5vh;
     display: inline-block;
-    cursor: pointer;
     text-align: center;
     text-decoration: none;
     outline: none;
+    cursor: pointer;
     color: #fff;
     background-color: rgb(153, 155, 153);
     border: 2px solid rgb(219, 219, 219);
@@ -109,51 +109,148 @@ body{
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
-    border:1px solid black;
-    background-color:rgba(85, 83, 83, 0.479);
+    border:2px solid black;
+    background-color:rgba(85, 83, 83, 0.884);
     grid-area: main;
     text-align: center;
     font-size: 50px;
     color:white;
     min-height: 60vh;
 }
-.card{
-    border:1px solid black;
+/* produktkortscss start */
+.cardDiv{
+    border:2px solid black;
     height:70vh;
     width: 35%;
     margin-bottom: 3vh;
     margin-top:5vh;
-    background-color: rgba(202, 199, 199, 0.589)
+    background-color: white;
+    /* background-color: rgba(202, 199, 199, 0.842); */
+    overflow: auto;
+    color: rgb(59, 59, 59);
 }
-.cardimage{
-    margin-top:0.5vh;
+.cardProdname{
+    margin:0px;
+    font-size: 30px;
+    height: 85px;
+}
+.cardImageDiv{
+    margin:0px;
+    padding:0px;
+
+}
+.cardInfoDiv{
+    margin:0px;
+    padding:0px;
+    font-size: 10px;
 }
 .prodbild{
     width: 17vw;
-    height:25vh;
+    height:25vh; 
+    margin:0px;
+    padding:0px;
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+    
 }
 .cardinfo{
-    font-size: 30px;
+    font-size: 15px;
     height:40%;
+    margin-top:15px;
+    padding-left:10px;
+    padding-right:10px;
+}
+.cardpris{
+    color:rgb(216, 186, 52);
+    font-size: 5vh;
+    margin:0px;
+}
+.buyDiv{
     margin:0px;
     padding:0px;
 }
-.cardpris{
-    color:red;
-    font-size: 3vh;
+.buy{
+    width:20vw;
+    height:5vh;
+}
+/* produktkortscss slut */
+
+/* kundvagns korts css start */
+.carth1{
     margin:0px;
 }
-.buy{
-    width:10vw;
-    height:4vh;
+.summeringsdiv{
+    font-size: 20px;
 }
+.cartCardsDiv{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width:100%;
+    justify-content: space-around;
+}
+.clearlist{
+    width:200px;
+    height:30px;
+    font-size: 15px;
+}
+.cartCardDiv{
+    border:2px solid black;
+    height:30vh;
+    width: 20%;
+    margin-bottom: 1.5vh;
+    margin-top:5vh;
+    background-color: white;
+    /* background-color: rgba(202, 199, 199, 0.842); */
+    overflow: auto;
+    color: rgb(59, 59, 59);
+}
+.cartCardProdname{
+    margin:0px;
+    font-size: 20px;
+    height: 60px;
+}
+.cardImageDiv{
+    margin:0px;
+    padding:0px;
+
+}
+.cardInfoDiv{
+    margin:0px;
+    padding:0px;
+    font-size: 10px;
+}
+.cartProdbild{
+    width: 10vw;
+    height:15vh; 
+    margin:0px;
+    padding:0px;
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+    
+}
+.cartCardinfo{
+    font-size: 15px;
+    height:40%;
+    margin-top:15px;
+    padding-left:10px;
+    padding-right:10px;
+}
+.cartCardpris{
+    color:rgb(216, 186, 52);
+    font-size: 2vh;
+    margin:0px;
+}
+
 .footer1{
     grid-area: footer1;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     border:1px solid black;
-    background-color:rgba(85, 83, 83, 0.479);
+    background-color:rgba(85, 83, 83, 0.884);
 }
 .footer1left, .footer1middle, .footer1right{
     text-align: center;
@@ -169,7 +266,8 @@ body{
     flex-direction: row;
     justify-content: space-around;
     border:1px solid black;
-    background-color:rgba(85, 83, 83, 0.479);
+    background-color:rgba(85, 83, 83, 0.884);
+
 }
 
 @media only screen and (max-width: 1000px) {
