--- a/style.css
+++ b/style.css
@@ -9,14 +9,13 @@ body{
 .container{
     display: grid;
     grid-template-columns: 10vw 80vw 10vw ;
-    grid-template-rows: 20vh 5vh 5vh auto 10vh 5vh;
+    grid-template-rows: 20vh 5vh 5vh auto 5vh;
     grid-template-areas: 
     "header header header"
     ". meny ."
     ". undermeny ."
     ". main ."
-    ". footer1 ."
-    ". footer2 ."
+    ". footer ."
     ;
 }
 .header{
@@ -58,15 +57,15 @@ body{
     justify-content: space-around;
     flex-wrap: wrap;
     grid-area: meny;
+    width:100%;
 }
-.mobilFooterproducts{
+.mobilproducts{
     display: none;  
 }
 .menybutton {
     font-family: 'Rozha One', serif;
-
-    width: 8.5vw;
-    height: 3.5vh;
+    width:76px;
+    height: 100%;
     display: inline-block;
     cursor: pointer;
     text-align: center;
@@ -89,8 +88,9 @@ body{
     display: flex;
     justify-content: space-around;
     grid-area: undermeny;
-    width:505px;
-    margin-left: 517px;
+    width:250px;
+    margin-left: 350px;
+    margin-top:5px;
 }
 .undermenybutton {
     width: 15vw;
@@ -116,27 +116,23 @@ body{
     transform: translateY(4px);
 }
 .main{
+    grid-area: main;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
     border:2px solid black;
     background-color:rgba(85, 83, 83, 0.884);
-    grid-area: main;
     text-align: center;
-    font-size: 50px;
+    font-size: 30px;
     color:white;
-    min-height: 60vh;
+    min-height: 500px;
     margin: 0px;
 }
-.main > h1{
-    margin:0px;
-    font-size: 90px;
-}
 #mainlogga{
-    width:100px;
-    height: 100px;
-    margin-bottom: 10%;
+    margin-top:30px;
+    width:400px;
+    height: 300px;
 }
 /* produktkortscss start */
 .cardDiv{
@@ -198,7 +194,7 @@ body{
 }
 /* produktkortscss slut */
 
-/* kundvagns korts css start */
+/* --- kundvagns korts css start ---- */
 .cartSummeringAntalOchPris{
     font-size: 20px;
     border:3px solid white;
@@ -227,7 +223,7 @@ body{
     font-size: 15px;
     
 }
-/* Kortet i carten */
+/* --- Kortet i carten ---- */
 .cartDiv{
     display: flex;
     flex-direction: column;
@@ -297,12 +293,13 @@ body{
     width:100%;
     height:auto;
 }
-.footer2{
-    grid-area: footer2;
+.footer{
+    grid-area: footer;
     display: flex;
+    padding-bottom:45px;
     flex-direction: row;
     justify-content: space-around;
-    border:1px solid black;
+    border:1px solid white;
     background-color:rgba(85, 83, 83, 0.884);
 
 }
@@ -325,17 +322,20 @@ body{
     .headerlogo{
         font-size: 22px;
         color:white;
+    }   
+    .main{
+        margin-top:10px;
     } 
-    .main > h1{
-        font-size: 20px;
-    }      
     #mainlogga{
-        width:340px;
-        height:300px;
+        width:240px;
+        height:200px;
     }
     .menybutton {
         width:80px;
-        height: 100%;
+        height: 40px;
+    }
+    .undermenybutton{
+        width:80px;
     }
     .meny{
         width: 100%;
@@ -345,7 +345,7 @@ body{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 550px;
+        width: 500px;
     }
     .mobilproductsmenu{
         display: flex;
@@ -390,14 +390,10 @@ body{
     }
     /* produktkortscss start */
 .cardDiv{
-    border:2px solid black;
-    height:400px;
+    height:350px;
     width: 200px;
     margin-bottom: 10px;
     margin-top:10px;
-    background-color: white;
-    overflow: auto;
-    color: rgb(59, 59, 59);
 }
 .cardProdname{
     margin:0px;
@@ -437,6 +433,43 @@ body{
     font-size: 13px;
 }
 /* produktkortscss slut */
+.carth1{
+    font-size: 40px;
+}
+.cartSummeringAntalOchPris{
+    width:250px;
+    height:80px;
+    font-size: 15px;
+}
+div > hr{
+    width:230px;
+}
+.cartCardDiv{
+    width:100px;
+    height:120px;
+}
+.cartCardProdNameDiv{
+    font-size: 9px;
+    margin:0px;
+}
+.cartProdbild{
+    width:45px;
+    height: 50px;
+    margin:0px;
+}
+.cartCardpris{
+    font-size: 13px;
+    margin-top:0px;
+}
 
-    
+/* --- Info CSS MOBIL --- */
+#address{
+    font-size: 18px;
+}
+#map{
+    width:230px;
+    height: 160px;
+    border:1px solid white;
+    margin:0px;
+}
 }
