--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
-
 body{
     max-width: 1280px;
-    margin:0px;
-    padding:0px;
+    margin:auto;
     background-image: url(bilder/sky.jpg);
     background-repeat: repeat;
 }
 .container{
+    margin:auto;
+    padding:0px;
     display: grid;
+    width:100%;
     grid-template-columns: 10vw 80vw 10vw ;
     grid-template-rows: 20vh 5vh 5vh auto 5vh;
     grid-template-areas: 
@@ -20,14 +21,11 @@ body{
 }
 .header{
     grid-area: header;
+    margin-right:50px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     background-color:rgba(85, 83, 83, 0.884);
-    margin-top:1.5vh;
-    margin-bottom:1.5vh;
-    margin-right:3.5vh;
-    margin-left:1.5vh;
 }
 .headerlogo{
     width:500px;
@@ -39,10 +37,10 @@ body{
 }
 .headerlogin{
     width:200px;
-    margin: auto;
+    margin-top:40px;
 }
 .headerproductscountdiv{
-    margin-top:40px;
+    margin-top:20px;
     margin-right:20px;
 }
 #summeringsLink{
@@ -54,17 +52,32 @@ body{
 .meny{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    justify-content: space-between;
     grid-area: meny;
     width:100%;
+}
+.produktMeny{
+    display: flex;
+    justify-content: center;
+    width:650px;
+}
+.restenMeny{
+    width:550px;
+}
+.undermeny{
+    display: flex;
+    justify-content: space-around;
+    grid-area: undermeny;
+    width:100%;
+    margin-left: 0px;
+    margin-top:5px;
 }
 .mobilproducts{
     display: none;  
 }
 .menybutton {
     font-family: 'Rozha One', serif;
-    width:76px;
+    width:120px;
     height: 100%;
     display: inline-block;
     cursor: pointer;
@@ -83,14 +96,6 @@ body{
     background-color: #433e8e;
     box-shadow: 3 1px #666;
     transform: translateY(4px);
-}
-.undermeny{
-    display: flex;
-    justify-content: space-around;
-    grid-area: undermeny;
-    width:250px;
-    margin-left: 350px;
-    margin-top:5px;
 }
 .undermenybutton {
     width: 15vw;
@@ -124,7 +129,6 @@ body{
     border:2px solid black;
     background-color:rgba(85, 83, 83, 0.884);
     text-align: center;
-    font-size: 30px;
     color:white;
     min-height: 500px;
     margin: 0px;
@@ -273,10 +277,25 @@ body{
     font-size: 3vh;
     margin:0px;
 }
-.kartDiv{
-    width: 80%;
-    margin-bottom:20%;
+/* --- KONTAKT CSS START ----*/
+
+.kartaOchKontaktinfoDiv{
+    display:flex;
+    flex-direction: row;
+    width: 100%;
+    width: 90%;
+    margin-bottom: 30px;
 }
+#mapDiv{
+    width:70%;
+}
+#addressDiv{
+    width:30%;
+    font-size: 20px;
+}
+
+/* --- KONTAKT CSS SLUT ----*/
+
 .footer1{
     grid-area: footer1;
     display: flex;
@@ -299,7 +318,6 @@ body{
     padding-bottom:45px;
     flex-direction: row;
     justify-content: space-around;
-    border:1px solid white;
     background-color:rgba(85, 83, 83, 0.884);
 
 }
@@ -458,6 +476,9 @@ div > hr{
     border:1px solid white;
     margin:0px;
 }
+.undermeny{
+    display: none;
+}
 }
 
 @media only screen and (max-width: 600px) {
@@ -611,7 +632,6 @@ div > hr{
 #map{
     width:230px;
     height: 160px;
-    border:1px solid white;
     margin:0px;
 }
 }
