--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
 body{
     max-width: 1280px;
-    margin:auto;
     background-image: url(bilder/sky.jpg);
     background-repeat: repeat;
 }
 .container{
-    margin:auto;
     padding:0px;
     display: grid;
     width:100%;
@@ -21,7 +19,7 @@ body{
 }
 .header{
     grid-area: header;
-    margin-right:50px;
+    margin-right:20px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -114,7 +112,6 @@ body{
     border-radius: 50px;
     font-size: 1.7vh;
     font-family: 'Rozha One', serif;
-
 }  
 .undermenybutton:hover {background-color: blue;}
   
@@ -123,11 +120,11 @@ body{
     box-shadow: 3 1px #666;
     transform: translateY(4px);
 }
-
 /* --- CSS FÖR MENYN SLUT ---- */
 
-/* --- CSS FÖR MAIN START ---- */
 
+
+/* --- CSS FÖR MAIN START ---- */
 .main{
     grid-area: main;
     display: flex;
@@ -138,7 +135,7 @@ body{
     background-color:rgba(85, 83, 83, 0.884);
     text-align: center;
     color:white;
-    min-height: 500px;
+    min-height: 65vh;
     margin: 0px;
 }
 #mainlogga{
@@ -210,6 +207,8 @@ body{
 }
 /* --- CSS FÖR PRODUKTKORT SLUT ---- */
 
+
+
 /* --- CSS FÖR KUNDVAGNEN START ---- */
 .cartSummeringAntalOchPris{
     font-size: 20px;
@@ -242,6 +241,8 @@ body{
     
 }
 /* --- CSS FÖR KUNDVAGNEN START ---- */
+
+
 
 /* --- CSS FÖR KUNDVAGNENS PRODUKTKORT START ---- */
 .cartDiv{
@@ -295,6 +296,8 @@ body{
 }
 /* --- CSS FÖR KUNDVAGNS PRODUKTKORT SLUT ---- */
 
+
+
 /* --- CSS FÖR KONTAKT SIDAN START ---- */
 .kartaOchKontaktinfoDiv{
     display:flex;
@@ -312,6 +315,9 @@ body{
 }
 /* --- CSS FÖR KONTAKT SIDAN SLUT ---- */
 
+
+
+
 /* --- CSS FÖR FOOTER START ---- */
 .footer{
     grid-area: footer;
@@ -324,99 +330,99 @@ body{
 }
 
 @media only screen and (max-width: 1000px) {
-    .container{
-        grid-template-columns: 10vw 80vw 10vw ;
-        grid-template-rows: 20vh 5vh 5vh auto 5vh;
-        grid-template-areas: 
-        "header header header"
-        "meny meny meny"
-        ". undermeny ."
-        ". main ."
-        ". footer ."
-        ;
-    }
-    .header{
-        margin:0px;
-    }
-    .headerlogo{
-        font-size: 20px;
-        color:white;
-    }  
-    #loginAndSum{
-        display: flex;
-        flex-direction: column;
-    }
-    #produkterIHeader{
-        margin-top:40px;
-        font-size: 15px;
-        color:white;
-    }
-    .headerproductscountdiv{
-        width:100%;
-    }
-    .headerlogin{
-        padding-left: 0px;
-        margin: 0px;
-    }
-    .login{
-        margin-right: 20px;
-        margin-top: 10px;
-    }
-    .headerproductscountdiv{
-        margin-top:5px;
-        margin-right:20px;
-    }
-    .meny{
-        width: 100%;
-        margin: auto;
-    } 
-    .mobilproducts{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        width: 100%;
-    }
-    .mobilproductsmenu{
-        display: flex;
-        justify-content: center;
-        width:100%;
-        margin-bottom: 10px;
-    }
-    .mobilProductsSubmenu{
-        display: flex;
-        justify-content: space-around;
-        width:70%;
-        margin-bottom:90px;
-    }
-    .produktMeny{
-        display: none;
-    }
-    .restenMeny{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        width:100%;
-        position: fixed;
-        bottom:0px;
-    }
-    .menybutton {
-        width:230px;
-        height: 40px;
-    }
-    .undermenybutton{
-        width:230px;
-        height:100%;
-    }
-    .undermeny{
-        display: none;
-    }
-    .main{
-        margin-top:10px;
-    } 
-    #mainlogga{
-        width:240px;
-        height:200px;
-    }
+.container{
+    grid-template-columns: 10vw 80vw 10vw ;
+    grid-template-rows: 20vh 5vh 5vh auto 5vh;
+    grid-template-areas: 
+    "header header header"
+    "meny meny meny"
+    ". undermeny ."
+    ". main ."
+    ". footer ."
+    ;
+}
+.header{
+    margin:0px;
+}
+.headerlogo{
+    font-size: 20px;
+    color:white;
+}  
+#loginAndSum{
+    display: flex;
+    flex-direction: column;
+}
+#produkterIHeader{
+    margin-top:40px;
+    font-size: 15px;
+    color:white;
+}
+.headerproductscountdiv{
+    width:100%;
+}
+.headerlogin{
+    padding-left: 0px;
+    margin: 0px;
+}
+.login{
+    margin-right: 20px;
+    margin-top: 10px;
+}
+.headerproductscountdiv{
+    margin-top:5px;
+    margin-right:20px;
+}
+.meny{
+    width: 100%;
+    margin: auto;
+} 
+.mobilproducts{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+}
+.mobilproductsmenu{
+    display: flex;
+    justify-content: center;
+    width:100%;
+    margin-bottom: 10px;
+}
+.mobilProductsSubmenu{
+    display: flex;
+    justify-content: space-around;
+    width:70%;
+    margin-bottom:90px;
+}
+.produktMeny{
+    display: none;
+}
+.restenMeny{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width:100%;
+    position: fixed;
+    bottom:0px;
+}
+.menybutton {
+    width:230px;
+    height: 40px;
+}
+.undermenybutton{
+    width:230px;
+    height:100%;
+}
+.undermeny{
+    display: none;
+}
+.main{
+    margin-top:10px;
+} 
+#mainlogga{
+    width:240px;
+    height:200px;
+}
     /* produktkortscss start */
 .cardDiv{
     height:350px;
