Stor produktsida uppdatering

--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 body{
-    margin: auto;
+    max-width: 1280px;
     background-image: url(bilder/sky.jpg);
     background-repeat: repeat;
 }
 .container{
     padding:0px;
     display: grid;
-    width:100%;
-    grid-template-columns: 128px 1024px 128px;
+    grid-template-columns: 10vw 80vw 10vw;
     grid-template-rows: 20vh 5vh 5vh auto 5vh;
     grid-template-areas: 
     "header header header"
@@ -206,8 +205,23 @@ body{
     font-size: 20px;
 }
 /* --- CSS FÖR PRODUKTKORT SLUT ---- */
+/* --- CSS FÖR STORT PRODUKTKORT START ---- */
 
-
+#FULLCardDiv{
+    margin-top:20px;
+    margin-bottom:20px;
+    width:400px;
+    height:80vh;
+    background-color: white;
+}
+#FULLCardProdname{
+    font-size: 40px;
+}
+.FULLProdbild{
+    width:300px;
+    height: 300px;
+    margin:20px;
+}
 
 /* --- CSS FÖR KUNDVAGNEN START ---- */
 .cartSummeringAntalOchPris{
